--- a/4-ABOUT ME.html
+++ b/4-ABOUT ME.html
@@ -18,7 +18,7 @@ header-img: "img/yuki-post-H.png"
     <blockquote><p>日本語を勉強しましょう<br>
     今から、頑張ってください！</p></blockquote>
 
-    <p>Hi，我是冒一个大泡泡，是一名非日语专业的普普通通大学生。</p>
+    <p>Hi，我是<strong>冒一个大泡泡</strong>，是一名非日语专业的普普通通大学生。</p>
 
     <p>在这里打卡我每日的日语学习，希望能与你们一起交流学习,发送给邮件至3033565751@qq.com。</p>
     
@@ -41,11 +41,11 @@ header-img: "img/yuki-post-H.png"
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
+    <p>Hi, I am <strong>yuki</strong>. I am a non Japanese major of ordinary college students.</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
+    <p>This is my personal blog, through forking Github Pages and Jekyll.👉 <a href="https://github.com/klovien/klovien.github.io">Klovien</a>.</p>
     
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
+    <p>I am happy to be here to share with you.</p>
 
     <h5>Talks</h5>
 
@@ -53,7 +53,7 @@ header-img: "img/yuki-post-H.png"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    <li><a href="https://yuki0930.github.io">冒一个大泡泡</a></li>
     </ul>
 </div> -->
 
